--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.3",
+    "uuid": "^11.1.0",
     "wallet-frontend": "file:"
   },
   "devDependencies": {
