--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
