starting with pluggy

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "firebase": "^11.8.1",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
+    "pluggy-sdk": "^0.73.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pluggy-connect": "^2.10.2",
     "recharts": "^2.15.3",
     "uuid": "^11.1.0",
     "wallet-frontend": "file:"
