--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-dom": "^19.0.0",
     "react-pluggy-connect": "^2.10.2",
     "recharts": "^2.15.3",
-    "uuid": "^11.1.0",
-    "wallet-frontend": "file:"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
